// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CSS/Helpers Hiding/Showing Content 1`] = `
<div>
  <table
    className="striped"
  >
    <thead>
      <tr>
        <th>
          Class
        </th>
        <th>
          Screen Range
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide
          </code>
        </td>
        <td>
          Hidden for all Devices
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide-on-small-only
          </code>
        </td>
        <td>
          Hidden for Mobile Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide-on-med-only
          </code>
        </td>
        <td>
          Hidden for Tablet Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide-on-med-and-down
          </code>
        </td>
        <td>
          Hidden for Tablet and Below
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide-on-med-and-up
          </code>
        </td>
        <td>
          Hidden for Tablet and Above
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .hide-on-large-only
          </code>
        </td>
        <td>
          Hidden for Desktop Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .show-on-small
          </code>
        </td>
        <td>
          Show for Mobile Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .show-on-medium
          </code>
        </td>
        <td>
          Show for Tablet Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .show-on-large
          </code>
        </td>
        <td>
          Show for Desktop Only
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .show-on-medium-and-up
          </code>
        </td>
        <td>
          Show for Tablet and Above
        </td>
      </tr>
      <tr>
        <td>
          <code
            className=" language-markup"
          >
            .show-on-medium-and-down
          </code>
        </td>
        <td>
          Show for Tablet and Below
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots CSS/Helpers Hover 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "auto",
        "width": 300,
      }
    }
  >
    <div
      className="card-panel hoverable"
    >
      Hover over me!
    </div>
  </div>
</div>
`;

exports[`Storyshots CSS/Helpers Text Align 1`] = `
<div>
  <div>
    <div
      className="card-panel "
    >
      <h5
        className="left-align"
      >
        This should be left aligned
      </h5>
    </div>
    <div
      className="card-panel "
    >
      <h5
        className="right-align"
      >
        This should be right aligned
      </h5>
    </div>
    <div
      className="card-panel "
    >
      <h5
        className="center-align"
      >
        This should be center aligned
      </h5>
    </div>
  </div>
</div>
`;

exports[`Storyshots CSS/Helpers Truncation 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "auto",
        "width": 300,
      }
    }
  >
    <div
      className="card-panel "
    >
      <h4
        className="truncate"
      >
        This is an extremely long title that will be truncated
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots CSS/Helpers Vertical Align 1`] = `
<div>
  <div
    className="card-panel "
  >
    <div
      className="valign-wrapper"
      style={
        Object {
          "height": 400,
        }
      }
    >
      <h5>
        This should be vertically aligned
      </h5>
    </div>
  </div>
</div>
`;
